Revert "NMS-6530: Use URI rather than URL in URLConnection stuff"
This reverts commit db369dd22fe4cfe542062f52ef92cddfac3f7249.